@@ -5,6 +5,9 @@ Version 0.8 (in development)
 ----------------------------
 (codename to be selected, released Apr XX, 2007)
 
+- Fixed a bug in the command line code that disallowed ``-O`` options
+  when using the ``-S`` option.
+
 - The `get_style_defs` method of HTML formatters now uses the `cssclass`
   option as the default selector if it was given.
 
